# veta_ros

demo/: CMakeLists.txt  package.xml
demo/math/: CMakeLists.txt
demo/math/launch/: RandomizerDemo.launch
demo/math/src/: RandomizerDemo.cpp
demo/noetic/: CMakeLists.txt
demo/noetic/launch/: TransformDemo.launch
demo/noetic/src/: TransformDemo.cpp
demo/space/: CMakeLists.txt
demo/space/launch/: StateSpaceDemo.launch  StateSpaceDemoM.launch
demo/space/src/: StateSpaceDemo.cpp
demo/util/: CMakeLists.txt
demo/util/launch/: ExceptionDemo.launch  ExceptionDemoM.launch  GenericParameterDemo.launch  GenericParameterDemoM.launch  LogHandlerDemo.launch  LogHandlerDemoM.launch
demo/util/src/: ExceptionDemo.cpp  GenericParameterDemo.cpp  LogHandlerDemo.cpp
docker/: Dockerfile  run
src/: CMakeLists.txt  package.xml
src/veta/: CMakeLists.txt
src/veta/math/: Angle.h  Point.h
src/veta/math/polynomial/: BasisSpline.h  Clothoid.h  CubicSpline.h  QuarticPolynomial.h  QuinticPolynomial.h
src/veta/math/polynomial/src/: BasisSpline.cpp  Clothoid.cpp  CubicSpline.cpp  QuarticPolynomial.cpp  QuinticPolynomial.cpp
src/veta/math/random/: GaussianRandomizer.h  Randomizer.h  UniformRandomizer.h
src/veta/math/random/src/: GaussianRandomizer.cpp  Randomizer.cpp  UniformRandomizer.cpp
src/veta/math/src/: Angle.cpp  Point.cpp
src/veta/space/: StateSpaceR2.h  StateSpaceSE2.h  StateSpaceSO2.h
src/veta/space/base/: MultiStateSpace.h  StateSpace.h
src/veta/space/base/src/: MultiStateSpace.cpp  StateSpace.cpp
src/veta/space/src/: StateSpaceR2.cpp  StateSpaceSE2.cpp  StateSpaceSO2.cpp
src/veta/util/: Exception.h  LogHandler.h  PointerForward.h
src/veta/util/generic/: GenericParameter.h  GenericRange.h
src/veta/util/generic/src/: GenericParameter.cpp  GenericRange.cpp
src/veta/util/src/: LogHandler.cpp
src/veta_noetic/: CMakeLists.txt
src/veta_noetic/rviz/: Color.h  Marker.h
src/veta_noetic/rviz/src/: Color.cpp
src/veta_noetic/transform/: TransformLink.h
src/veta_noetic/transform/src/: TransformLink.cpp
src/veta_noetic/util/: Timer.h
